refactor: introduce Fluent Form Binding DSL and modernize UI dialogs
- Introduce declarative FormBindingContext, Binding, TextBinding, TextAreaBinding, CheckBoxBinding, and ComboBoxBinding under edu.harvard.mcz.imagecapture.ui.binding
- Refactor SpecimenDetailsViewPane to eliminate 50+ boilerplate lazy getters and repetitive 3-way synchronization methods
- Modernize Java 17 idioms with pattern matching for instanceof and non-blocking HttpClient for GBIF Taxon ID validation
- Apply Fluent Form Binding DSL across UserDialog, CitedInDialog, SpecimenPartAttribEditDialog, VerbatimCaptureDialog, and GeoreferenceDialog
- Fix year field retrieval bug in CitedInDialog
- Add comprehensive unit tests in TestFormBindingContext and register in AllTests suite
- Apply Spotless formatting across all affected files